--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -20,6 +20,24 @@ a {
   box-sizing: border-box;
 }
 
+@media (max-width: 850px) {
+  .content {
+    flex-direction: column;
+    min-width: 0;
+    overflow: hidden;
+  }
+  .content-home-left, .content-home-right {
+    flex: 1 1 100%;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    overflow: hidden;
+    flex-wrap: wrap;
+  }
+  .content-home-left > *, .content-home-right > * {
+    flex-shrink: 1;
+  }
+}
 .content-home .content-home-right {
   flex-basis: 55%;
   overflow: hidden;
@@ -65,8 +83,16 @@ a {
   font-size: 0.75rem;
   color: lightslategray;
 }
+.content-home .content-home-right .content-post .post {
+  display: flex;
+  flex-direction: column;
+}
 .content-home .content-home-right .content-post .post .media, .content-home .content-home-right .content-post .post .media-loading {
-  height: 400px;
+  width: 100%;
+  justify-self: center;
+  align-self: center;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .content-home .content-home-right .content-post .post .media-loading {
   background-color: lightgray;
@@ -151,7 +177,6 @@ a {
   flex-direction: row;
   align-items: center;
   gap: 0.5em;
-  padding: 0.5em;
 }
 .content-home .content-home-right .content-post .post-interaction .replies .reply-to {
   font-size: 0.8rem;
@@ -179,7 +204,6 @@ a {
   box-shadow: 0.5px 0.5px 5px lightgray;
   border-radius: 10px;
   padding: 0.7em;
-  min-width: 10em;
 }
 .content-home .content-home-right .content-post .post-interaction .replies .reply-profile-content .reply-profile-name {
   font-size: 0.9rem;
