--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -22,6 +22,26 @@ a{
   }
 }
 
+@media (max-width: 850px){
+  .content{
+    flex-direction: column;
+    min-width: 0;
+    overflow: hidden;
+  }
+
+  .content-home-left, .content-home-right{
+    flex: 1 1 100%;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    overflow: hidden;
+    flex-wrap: wrap;
+    >*{
+      flex-shrink: 1;
+    }
+  }
+}
+
 .content-home{
 
   .content-home-right{
@@ -78,9 +98,15 @@ a{
       }
 
       .post{
+        display: flex;
+        flex-direction: column;
 
         .media, .media-loading{
-          height: 400px;
+          //height: 400px;
+          width: 100%;
+          justify-self: center;
+          align-self: center;
+          object-fit: contain;
         }
 
         .media-loading{
@@ -181,7 +207,7 @@ a{
               flex-direction: row;
               align-items: center;
               gap: 0.5em;
-              padding: 0.5em;
+              //padding: 0.5em;
             }
           }
 
@@ -215,7 +241,7 @@ a{
             box-shadow: .5px .5px 5px lightgray;
             border-radius: 10px;
             padding: 0.7em;
-            min-width: 10em;
+            //min-width: 10em;
 
             .reply-profile-name{
               font-size: 0.9rem;
