--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -42,6 +42,67 @@ a {
   flex-basis: 55%;
   overflow: hidden;
 }
+.content-home .content-home-right .post-prompt {
+  background-color: white;
+  box-shadow: 0.5px 0.5px 5px lightgray;
+  border-radius: 5px;
+  margin-bottom: 1em;
+  padding-bottom: 1em;
+  min-height: 10em;
+}
+.content-home .content-home-right .post-prompt .media, .content-home .content-home-right .post-prompt .media-loading {
+  width: 4em;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+}
+.content-home .content-home-right .post-prompt .person-detail-flex {
+  height: 100%;
+  width: 90%;
+}
+.content-home .content-home-right .post-prompt .post-form {
+  min-height: 5em;
+  width: 100%;
+}
+.content-home .content-home-right .post-prompt .post-form .post-textbox {
+  height: 100%;
+  width: 100%;
+  resize: none;
+  font: inherit;
+  font-size: 0.75rem;
+  border-radius: 5px;
+  padding: 1em;
+}
+.content-home .content-home-right .post-prompt .attach-media {
+  padding: 0 2em;
+  display: flex;
+  flex-direction: row;
+}
+.content-home .content-home-right .post-prompt .attach-icons {
+  display: flex;
+  flex-basis: 100%;
+  gap: 1em;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.content-home .content-home-right .post-prompt .attach-icon {
+  font-size: 1.5em;
+}
+.content-home .content-home-right .person-detail-flex {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1em;
+}
+.content-home .content-home-right .person-detail-flex .person-detail-image, .content-home .content-home-right .person-detail-flex .person-detail-info {
+  padding: 0.5em;
+}
+.content-home .content-home-right .person-detail-flex .post-author {
+  font-weight: 600;
+}
+.content-home .content-home-right .person-detail-flex .post-time {
+  font-size: 0.75rem;
+  color: lightslategray;
+}
 .content-home .content-home-right .content-post {
   background-color: white;
   box-shadow: 0.5px 0.5px 5px lightgray;
@@ -66,22 +127,6 @@ a {
 .content-home .content-home-right .content-post .post-author:hover, .content-home .content-home-right .content-post .reply-profile-name:hover {
   cursor: pointer;
   text-decoration: underline;
-}
-.content-home .content-home-right .content-post .person-detail-flex {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 1em;
-}
-.content-home .content-home-right .content-post .person-detail-flex .person-detail-image, .content-home .content-home-right .content-post .person-detail-flex .person-detail-info {
-  padding: 0.5em;
-}
-.content-home .content-home-right .content-post .person-detail-flex .post-author {
-  font-weight: 600;
-}
-.content-home .content-home-right .content-post .person-detail-flex .post-time {
-  font-size: 0.75rem;
-  color: lightslategray;
 }
 .content-home .content-home-right .content-post .post {
   display: flex;
@@ -198,6 +243,7 @@ a {
   flex-direction: row;
   justify-content: flex-end;
   color: lightslategray;
+  gap: 0.5em;
 }
 .content-home .content-home-right .content-post .post-interaction .replies .reply-profile-content {
   background-color: rgb(247, 247, 247);
