--- a/src/index-style.css
+++ b/src/index-style.css
@@ -9,9 +9,13 @@ h2, h3, p {
 }
 
 .App {
+  height: 100vh;
+  overflow: auto;
+}
+
+.Users {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  min-height: 100vh;
 }
 
 header, .main, .footer {
