--- a/src/index-style.scss
+++ b/src/index-style.scss
@@ -10,9 +10,13 @@ h2, h3, p{
 
 
 .App{
+  height: 100vh;
+  overflow: auto;
+}
+
+.Users{
   display: grid;
   grid-template-rows: auto 1fr auto;
-  min-height: 100vh;
 }
 
 header, .main, .footer{
