--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -39,6 +39,14 @@ a {
     flex-shrink: 1;
   }
 }
+@media (max-width: 450px) {
+  .sub-replies-container {
+    padding-left: 0.5em !important;
+  }
+  .reply-profile-content {
+    max-width: 25ch;
+  }
+}
 .content-home .content-home-right {
   flex-basis: 55%;
   overflow: hidden;
@@ -52,9 +60,7 @@ a {
   min-height: 10em;
 }
 .content-home .content-home-right .post-prompt .media, .content-home .content-home-right .post-prompt .media-loading {
-  width: 4em;
-  aspect-ratio: 1/1;
-  border-radius: 50%;
+  height: 100%;
 }
 .content-home .content-home-right .post-prompt .person-detail-flex {
   height: 100%;
@@ -77,25 +83,50 @@ a {
   padding: 0 2em;
   display: flex;
   flex-direction: row;
+  min-width: 0;
+  min-height: 0;
+  overflow: hidden;
 }
 .content-home .content-home-right .post-prompt .attach-icons {
   display: flex;
-  flex-basis: 100%;
-  gap: 1em;
+  flex: 1 1 auto;
   flex-direction: row;
   justify-content: space-evenly;
+  min-width: 0;
+  min-height: 0;
+  overflow: hidden;
+}
+.content-home .content-home-right .post-prompt .attach-icons > * {
+  width: 100% !important;
+  flex: 1 1 auto;
 }
 .content-home .content-home-right .post-prompt .attach-icon {
   font-size: 1.5em;
+}
+.content-home .content-home-right .person-detail-image, .content-home .content-home-right .reply-profile-img {
+  width: 50px;
+  border-radius: 50%;
+  border: 1px solid lightgray;
+  aspect-ratio: 1/1;
+  transition: all 0.2s ease-out;
+  background-color: lightslategray;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+.content-home .content-home-right .person-detail-image:hover, .content-home .content-home-right .reply-profile-img:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.content-home .content-home-right .person-detail-image > *, .content-home .content-home-right .reply-profile-img > * {
+  height: 100%;
 }
 .content-home .content-home-right .person-detail-flex {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 1em;
-}
-.content-home .content-home-right .person-detail-flex .person-detail-image, .content-home .content-home-right .person-detail-flex .person-detail-info {
-  padding: 0.5em;
+  gap: 1em;
 }
 .content-home .content-home-right .person-detail-flex .post-author {
   font-weight: 600;
@@ -110,20 +141,6 @@ a {
   border-radius: 5px;
   margin-bottom: 1em;
   padding-bottom: 1em;
-}
-.content-home .content-home-right .content-post .person-detail-image img, .content-home .content-home-right .content-post .reply-profile-img img {
-  width: 50px;
-  border-radius: 50%;
-  border: 1px solid lightgray;
-  aspect-ratio: 1/1;
-  transition: all 0.2s ease-out;
-}
-.content-home .content-home-right .content-post .person-detail-image img:hover, .content-home .content-home-right .content-post .reply-profile-img img:hover {
-  transform: scale(1.1);
-  cursor: pointer;
-}
-.content-home .content-home-right .content-post .reply-profile-img img {
-  width: 40px;
 }
 .content-home .content-home-right .content-post .post-author:hover, .content-home .content-home-right .content-post .reply-profile-name:hover {
   cursor: pointer;
@@ -251,6 +268,7 @@ a {
   box-shadow: 0.5px 0.5px 5px lightgray;
   border-radius: 10px;
   padding: 0.7em;
+  max-width: 30ch;
 }
 .content-home .content-home-right .content-post .post-interaction .replies .reply-profile-content .reply-profile-name {
   font-size: 0.9rem;
@@ -276,7 +294,7 @@ a {
   border-radius: 5px;
 }
 .content-home .content-home-right .content-post .post-interaction .replies .sub-replies-container {
-  padding-left: 2em;
+  padding-left: 1em;
 }
 .content-home .content-home-right .content-post .post-interaction .replies .sub-replies-container .reply {
   padding-top: 0;
