--- a/src/index-style.scss
+++ b/src/index-style.scss
@@ -96,9 +96,6 @@ header, .main, .footer{
     .profile-name-img{
       justify-content: center;
 
-      .profile-img-container{
-        flex-basis: 25%;
-      }
       .profile-name{
         flex-basis: 40%;
       }
@@ -129,7 +126,6 @@ header, .main, .footer{
       max-width: 850px;
       margin: 0 auto;
       height: 100%;
-      background: url('/images/insta-background.png');
       border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;
     }
 
@@ -161,19 +157,24 @@ header, .main, .footer{
   }
 
   .profile-img-container{
-    flex-basis: 20%;
+    width: 80px;
+    border-radius: 50%;
+    border: 1px solid lightgray;
+    transition: all .2s ease-out;
+    aspect-ratio: 1/1;
+    background-color: lightslategray;
+    overflow: hidden;
+    
+    display: flex;
+    justify-content: center;
+
+    &:hover{
+      cursor: pointer;
+      transform: scale(1.1);
+    }
 
     .profile-img{
-      width: 80px;
-      border-radius: 50%;
-      border: 1px solid lightgray;
-      transition: all .2s ease-out;
-      aspect-ratio: 1/1;
-
-      &:hover{
-        cursor: pointer;
-        transform: scale(1.1);
-      }
+      height: 100%
     }
   }
 
