--- a/client/src/index-style.css
+++ b/client/src/index-style.css
@@ -9,8 +9,7 @@ h2, h3, p {
 }
 
 .App {
-  height: 100vh;
-  overflow: auto;
+  height: 100%;
 }
 
 .Users {
@@ -20,7 +19,6 @@ h2, h3, p {
 
 header, .main, .footer {
   width: 90%;
-  max-width: 950px;
 }
 
 .header-container {
@@ -28,9 +26,10 @@ header, .main, .footer {
   position: sticky;
   background-color: white;
   top: 0;
-  z-index: 100;
+  z-index: 10000;
   padding-bottom: 0.5em;
   box-shadow: 0 0.5px 5px lightgray;
+  color: #1B74E4;
 }
 .header-container header {
   display: flex;
@@ -38,6 +37,11 @@ header, .main, .footer {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+}
+.header-container header .name {
+  padding: 1rem;
+  font-size: 2rem;
+  font-weight: 600;
 }
 .header-container header ul {
   all: unset;
@@ -60,6 +64,7 @@ header, .main, .footer {
   min-height: 5em;
   align-items: center;
   display: flex;
+  background-color: white;
 }
 .footer-container .footer {
   display: flex;
