--- a/client/src/components/FeedPage/feed.css
+++ b/client/src/components/FeedPage/feed.css
@@ -1,24 +1,62 @@
 .feed-container{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: start;
+  gap: 5em;
+  height: 100%;
 
 }
 
 .feed-container .content-home{
-  flex-basis: 40%;
+  width: 50em;
 }
 .feed-container .content-home-right{
   padding: 1em;
   box-sizing: border-box;
 }
 
+.feed-left{
+  background-color: white;
+  flex-basis: 20%;
+  box-shadow: 1px 0 5px -2px lightgray;
+}
+
 .feed-options{
-  flex-basis: 30%;
+  padding-top: 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+
+  position: sticky;
+  top: 100px;
+}
+
+
+.feed-options .feed-options-basic{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+  padding-left: 1em;
+}
+
+.friends-flex, .suggested-users{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 20em;
 }
 
 .feed-users{
   flex-basis: 30%;
+}
+
+.feed-welcome-text{
+  background-color: white;
+  border: 1px solid lightgray;
+  border-bottom: none;
+  border-top-right-radius: 10px; border-top-left-radius: 10px;
+  padding: 1em
 }
 
 @media (max-width: 1000px){
