Implemented post/reply deletion and began using redux for state management

--- a/client/src/components/Content/Content.scss
+++ b/client/src/components/Content/Content.scss
@@ -8,6 +8,10 @@ a{
   background-color: rgb(247, 247, 247);
 }
 
+.delete-icon{
+  font-size: 1.1rem;
+}
+
 .content{
   width: 90%;
   max-width: 850px;
@@ -157,7 +161,7 @@ a{
       flex-direction: row;
       align-items: center;
       padding: 1em;
-      gap: 1em;
+      justify-content: space-between;
       
       .post-author{
         font-weight: 600;
@@ -302,8 +306,8 @@ a{
             display: flex;
             flex-direction: row;
             padding: 1em 0;
-            gap: 0.5em;
             align-items: flex-start;
+            justify-content: space-between;
 
           }
           
